Changed by Sally

--- a/public/index.html
+++ b/public/index.html
@@ -155,57 +155,74 @@
             <header role="banner" aria-labelledby="ibm-pagetitle-h1">
                 <!-- NAVIGATION_BEGIN -->
                 <div class="ibm-sitenav-menu-container">
-                    <div class="ibm-sitenav-menu-name"><a href="">Welcom to Dalian IMT</a></div>
+                    <div class="ibm-sitenav-menu-name"><a href="">HOME</a></div>
                     <div class="ibm-sitenav-menu-list">
                         <ul role="menubar">
-                            <li role="presentation"><a href="/">IMT Home</a></li>
-                            <li role="presentation"><a href="/weeklystatus">Weekly Status</a></li>
-                            <li role="presentation"><a href="/project">Project</a></li>
-                            <li role="presentation"><a href="/schedule">Schedule</a></li>
-                            <li role="presentation"><a href="/user">People</a></li>
+                            <li role="presentation"><a href="/">Node.js Home</a></li>
+                            <li role="presentation"><a href="/test01">Test01</a></li>
+                            <li role="presentation"><a href="/test02">Test02</a></li>
+                            <li role="presentation"><a href="/test03">Test03</a></li>
+                            <li role="presentation"><a href="/test04">Test04</a></li>
                         </ul>
                     </div>
                 </div>
                 <!-- NAVIGATION_END -->
-            </header>
-            <div id="ibm-leadspace-head" class="ibm-alternate" style="background: url(./images/leadspace-pink.jpg) center / cover no-repeat;">
-                <div id="ibm-leadspace-body" class="ibm-padding-top-r2 ibm-padding-bottom-r2">
-                    <div class="ibm-columns ibm-alternate-background">
-                        <div class="ibm-col-6-4 ibm-col-medium-1-1">
-                            <h1 class="ibm-h1 ibm-medium ibm-padding-bottom-1">Welcome to Dalian IMT(May 8)</h1>
-                            <h4 class="ibm-h4 ibm-padding-bottom-2">Tracking, Monitoring, Recording and Presenting</h4>
-                            <p class="ibm-button-link ibm-btn-row">
-                                <a href="/user" class="ibm-btn-sec ibm-btn-white">People</a>
-                                <a href="/project" class="ibm-btn-sec ibm-btn-white">Project</a>
-                            </p>
-                            <form id="test_form" class="ibm-row-form" method="post" action="/esignature">
-                                <div class="ibm-columns">
-                                    <div class="ibm-col-6-2">
+                <div id="ibm-leadspace-head" class="ibm-alternate" style="background: url(./images/leadspace-pink.jpg) center / cover no-repeat;">
+                    <div id="ibm-leadspace-body" class="ibm-padding-top-r2 ibm-padding-bottom-r2">
+                        <div class="ibm-columns ibm-alternate-background">
+                            <div class="ibm-col-6-4 ibm-col-medium-1-1">
+                                <h1 class="ibm-h1 ibm-medium ibm-padding-bottom-1">Welcome to Dalian IMT(May 8)</h1>
+                                <h4 class="ibm-h4 ibm-padding-bottom-2">Tracking, Monitoring, Recording and Presenting</h4>
+                                <!--
+                                <p class="ibm-button-link ibm-btn-row">
+                                    <a href="/user" class="ibm-btn-sec ibm-btn-white">People</a>
+                                    <a href="/project" class="ibm-btn-sec ibm-btn-white">Project</a>
+                                </p>
+                                -->
+                                <form id="test_form" class="ibm-row-form" method="post" action="/esignature">
+                                    <div class="ibm-columns">
+                                        <div class="ibm-col-6-2">
 
-                                    </div>
-                                    <div class="ibm-col-6-2">
+                                        </div>
+                                        <div class="ibm-col-6-2">
 
+                                        </div>
                                     </div>
-                                </div>
-                            </form>
+                                </form>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- FOOTER_BEGIN -->
-            <div id="ibm-footer-module"></div>
-            <footer role="contentinfo" aria-label="IBM">
-                <div id="ibm-footer">
-                    <ul>
-                        <li><a href="http://www.ibm.com/contact/us/en/">Contact</a></li>
-                        <li><a href="http://www.ibm.com/privacy/us/en/">Privacy</a></li>
-                        <li><a href="http://www.ibm.com/legal/us/en/">Terms of use</a></li>
-                        <li><a href="http://www.ibm.com/accessibility/us/en/">false</a></li>
-                    </ul>
+            </header>
+            <main aria-label="Node.js Home" role="main">
+                <!--CONTENT_BEGIN-->
+                <div id="ibm-content">
+                    <!--CONTENT_BODY-->
+                    <div id="ibm-content-body">
+                        <form class="ibm-column-form">
+                            <div class="ibm-columns">
+                                <div class="ibm-col-1-1">
+                                    
+                                </div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-            </footer>
-            <!-- FOOTER_END -->
+            </main>
         </div>
+        <!-- FOOTER_BEGIN -->
+        <div id="ibm-footer-module"></div>
+        <footer role="contentinfo" aria-label="IBM">
+            <div id="ibm-footer">
+                <ul>
+                    <li><a href="http://www.ibm.com/contact/us/en/">Contact</a></li>
+                    <li><a href="http://www.ibm.com/privacy/us/en/">Privacy</a></li>
+                    <li><a href="http://www.ibm.com/legal/us/en/">Terms of use</a></li>
+                    <li><a href="http://www.ibm.com/accessibility/us/en/">false</a></li>
+                </ul>
+            </div>
+        </footer>
+        <!-- FOOTER_END -->
     </div>
 </body>
 </html>
