Changed by Sally

--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,12 @@
                         <form class="ibm-column-form">
                             <div class="ibm-columns">
                                 <div class="ibm-col-1-1">
-                                    
+                                    <form action="https://sallynodejs.mybluemix.net/process_get" method="GET">
+                                        First Name: <input type="text" name="first_name">  <br>
+                                         
+                                        Last Name: <input type="text" name="last_name">
+                                        <input type="submit" value="Submit">
+                                    </form>
                                 </div>
                             </div>
                         </form>
