Changed by Sally

--- a/public/index.html
+++ b/public/index.html
@@ -203,10 +203,17 @@
                             <div class="ibm-columns">
                                 <div class="ibm-col-1-1">
                                     <form action="https://sallynodejs.mybluemix.net/process_get" method="GET">
-                                        First Name: <input type="text" name="first_name">  <br>
-                                         
-                                        Last Name: <input type="text" name="last_name">
-                                        <input type="submit" value="Submit">
+                                        <p>
+                                            <label>First Name:</label>
+                                            <span><input type="text" name="first_name"></span>
+                                        </p>
+                                        <p>
+                                            <label>Last Name:</label>
+                                            <span><input type="text" name="last_name"></span>
+                                        </p>
+                                        <p class="ibm-btn-row">
+                                            <input class="ibm-btn-pri" type="submit" value="Submit">
+                                        </p>
                                     </form>
                                 </div>
                             </div>
